<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFA2A1"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/SignInPage"
        android:weightSum="100"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:weightSum="100"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:text="DION"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textSize="70sp"
                android:textColor="@android:color/black"
                android:textStyle="normal"
                app:layout_constraintBottom_toTopOf="@+id/imageView"/>

            <ImageView
                android:id="@+id/imageView"
                android:layout_weight="60"
                android:layout_gravity="center"
                android:layout_width="161dp"
                android:layout_height="147dp"
                android:layout_marginBottom="0dp"
                app:srcCompat="@drawable/logo" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editText_Username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/User"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="#4C4C4C"
                android:typeface="normal"
                android:verticalScrollbarPosition="defaultPosition"/>

            <EditText
                android:id="@+id/editText_Password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:inputType="textPassword"
                android:text="@string/Password"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="#4A4747"
                app:layout_constraintBottom_toBottomOf="@id/editText_Username"/>


            <Button
                android:id="@+id/button_signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:background="#000000"
                android:text="@string/SignIn"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/editText_Password" />

        </LinearLayout>



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>