<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyPharmacy">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/HomePage"
        android:weightSum="100"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="85"
            android:background="@android:color/black"
            android:weightSum="10"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="8"
                android:background="#FFA2A1">
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="37"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="22dp"
                    android:layout_marginBottom="22dp"
                    android:background="@drawable/menuicon"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="2"
                android:background="#FFA2A1"
                android:weightSum="100"
                android:id="@+id/DION_LAYOUT"
                app:layout_constraintBottom_toTopOf="@+id/DIONHeader">

                <View
                    android:layout_width="3dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="0dp"
                    android:background="@android:color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="DION"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:layout_weight="30"
                    android:textColor="@android:color/black"
                    android:textSize="50sp"
                    android:layout_marginTop="11dp"
                    android:layout_marginBottom="12dp">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="70"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/logo">

                </TextView>
            </LinearLayout>



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="15"
            android:background="#FFA2A1"
            android:orientation="vertical"
            android:weightSum="130">
            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@android:color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:text="@string/MiFarmacia"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textStyle="bold"
                android:id="@+id/MyPharmacy_TextView" />

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@android:color/black"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:background="@drawable/farmacia_mypharmacy"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:text="@string/Make_order"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:background="@android:color/black"
                android:id="@+id/Makeorder_button"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:background="@drawable/transporte_mypharmacy"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:text="@string/Delivery_state_pharmacy"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:background="@android:color/black"
                android:id="@+id/deliverystate_button"/>


        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>